# QLLM

./: .flake8  .gitignore  MANIFEST.in  README.md  a.patch  gptq.py  main_test.py  model_quantization_base.py  mpt.py  mpt_new.py  pyproject.toml  qllm_colab.ipynb  requirements.txt  setup.py
.github/workflows/: mannu_build.yml  python-package.yml  release.yml
csrc/awq_cuda/: pybind_awq.cpp
csrc/ort_cuda/: common.cuh  dq.cu  ort_ops.cc
ort_custom/: cuda_ops.cc  custom_op_library.cc  index_add_op.cc  index_add_op.h  setup.py
ort_custom/etra_ort_headers/: Readme.md  cuda_context.h  cuda_resource.h  custom_op_context.h
qllm/: __init__.py  __main__.py  args_config.py  auto_model_quantization.py  gptq.py  method.py  model_quantization_base.py  run.py
qllm/auto_datasets/: __init__.py
qllm/custom/: __main__.py  m_mpt.py  mpt.py  mpt_new.py  run.py
qllm/modeling/: __init__.py  base.py  config.py
qllm/plugin/: conversation.py  perplexity_utils.py
qllm/quant/: __init__.py  awq_quant_linear.py  compress_weight.py  fused_attn.py  fused_mlp.py  quant_linear.py  quant_linear_awq.py  quant_linear_onnxruntime.py  quant_linear_triton.py  triton_norm.py
qllm/quantization/: __init__.py  _awq_quantizer.py  _gptq_quantizer.py  _hqq_quantizer.py  awq_quant.py  config_builder.py  gptq.py  gptq_quant.py  method.py  quant_awq.py  quant_frame_base.py  quant_gptq.py  quant_hqq.py  sequential_layes_awq_config.py  sequential_layes_config.py  sequential_layes_gptq_config.py
qllm/utils/: __init__.py  comm_utils.py  datautils.py  logger.py  modelutils.py
quant/: __init__.py  quant_linear.py
src/ort_cuda/: dq.cu  dq_gemv.cu  ort_ops.cc
utils/: modelutils.py
(+38 files in other folders)
