[build-system]
requires = ["setuptools>=40.8.0", "wheel", "packaging", "ninja>=1.11.1", "torch==2.1.0"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
disable_split_list_with_comment = true
each_dict_entry_on_separate_line=false
split_before_named_assigns = false
split_complex_comprehension = true

[tool.yapfignore]
ignore_patterns = [
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E701", "E731", "E741",]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    ]

build-backend = "setuptools.build_meta"
