[build-system]
requires = ["setuptools==69.5.1", "wheel", "packaging", "ninja>=1.11.1", "torch==2.2.2"]

build-backend = "setuptools.build_meta"


[tool.yapf]
based_on_style = "pep8"
column_limit = 120
disable_split_list_with_comment = true
each_dict_entry_on_separate_line=false
split_before_named_assigns = false
split_complex_comprehension = true

[tool.yapfignore]
ignore_patterns = [
]

[tool.ruff]
line-length = 120
src = ["qllm"]
exclude = ["qllm/utils/onnx/merge_encoder_decoder.py",
"qllm/plugin",
"qllm/modeling/q_layers/fused_mlp.py",
"qllm/modeling/q_layers/fused_attn.py",
"qllm/modeling/q_layers/quant_linear_triton.py",
"qllm/custom",
]

[tool.ruff.lint]
ignore = ["E501", "E701", "E731", "E741",]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    ]

